@@ -5,11 +5,11 @@
  * Description: Take credit card payments on your store using Stripe.
  * Author: WooCommerce
  * Author URI: https://woocommerce.com/
- * Version: 7.0.1
- * Requires at least: 5.8
- * Tested up to: 6.0
- * WC requires at least: 6.8
- * WC tested up to: 7.0
+ * Version: 7.0.2
+ * Requires at least: 5.9
+ * Tested up to: 6.1
+ * WC requires at least: 6.9
+ * WC tested up to: 7.3
  * Text Domain: woocommerce-gateway-stripe
  * Domain Path: /languages
  */
@@ -23,8 +23,8 @@ if ( ! defined( 'ABSPATH' ) ) {
  */
 define( 'WC_STRIPE_VERSION', '7.0.1' ); // WRCS: DEFINED_VERSION.
 define( 'WC_STRIPE_MIN_PHP_VER', '7.3.0' );
-define( 'WC_STRIPE_MIN_WC_VER', '6.8' );
-define( 'WC_STRIPE_FUTURE_MIN_WC_VER', '6.9' );
+define( 'WC_STRIPE_MIN_WC_VER', '6.9' );
+define( 'WC_STRIPE_FUTURE_MIN_WC_VER', '7.1' );
 define( 'WC_STRIPE_MAIN_FILE', __FILE__ );
 define( 'WC_STRIPE_ABSPATH', __DIR__ . '/' );
 define( 'WC_STRIPE_PLUGIN_URL', untrailingslashit( plugins_url( basename( plugin_dir_path( __FILE__ ) ), basename( __FILE__ ) ) ) );
